--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
-* {
+/* * {
     border: 1px solid red;
-}
+} */
 
 body {
     background-image: url('./img/bg-image.jpg');
@@ -19,12 +19,30 @@ body {
 .btn {
     background-color: transparent;
     margin: 1rem;
+    border: none;
 }
 
-.pSelect {
-    color: black;
-    background-color: pink;
+.pSelect,
+.cSelect,
+.matchResult {
+    color: rgb(255, 255, 255);
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: bold;
+    font-size: 32px;
+    background-color: rgba(0, 0, 0, 0.555);
     display: flex;
     flex: 1;
+    align-items: center;
+    justify-content: center;
     height: 2rem;
+    margin: 1rem;
+    padding: 2rem 2rem;
+}
+
+#results {
+    display: flex;
+    flex-direction: row;
+    flex: 1;
+    align-items: center;
+    justify-content: center;
 }
