--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
-* {
+/* * {
   border: 1px solid red;
-}
+} */
 
 html {
   margin: 0;
@@ -20,12 +20,13 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  height: 100vh;
 }
 
 .winnerDisplay,
 .matchInfo {
   display: flex;
-  flex: 1;
+  flex: 0.5;
 }
 
 .matchInfo {
@@ -58,7 +59,7 @@ body {
   color: rgb(255, 255, 255);
   font-family: "Times New Roman", Times, serif;
   font-weight: bold;
-  font-size: 32px;
+  font-size: 24px;
   background-color: rgba(0, 0, 0, 0.555);
   display: flex;
   align-items: center;
@@ -83,7 +84,7 @@ body {
   color: rgb(255, 255, 255);
   font-family: "Times New Roman", Times, serif;
   font-weight: bold;
-  font-size: 32px;
+  font-size: 24px;
   background-color: rgba(0, 0, 0, 0.555);
   display: flex;
   flex: 1;
@@ -92,6 +93,15 @@ body {
   height: 2rem;
   margin: 1rem;
   padding: 2rem 2rem;
+}
+
+.reset {
+  height: 100vh;
+  width: 100vw;
+  background-color: rgba(0, 0, 0, 0.466);
+  position: absolute;
+  display: flex;
+  flex: 1;
 }
 
 #results {
@@ -108,6 +118,18 @@ body {
   display: flex;
   flex-direction: row;
   flex: 1;
+  align-items: center;
+  justify-content: center;
+  padding-left: 5rem;
+  padding-right: 5rem;
+}
+
+#winnerDisplay {
+  color: white;
+  font-size: 48px;
+  display: flex;
+  flex-direction: row;
+  flex: 0.5;
   align-items: center;
   justify-content: center;
   padding-left: 5rem;
