--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ body {
   font-family: "Times New Roman", Times, serif;
   font-weight: bold;
   font-size: 24px;
-  background-color: rgba(0, 0, 0, 0.555);
+  background-color: rgba(0, 0, 0, 0.726);
   display: flex;
   flex: 1;
   align-items: center;
@@ -123,14 +123,19 @@ body {
 }
 
 .rButton {
-  background-color: rgb(253, 253, 253);
-  color: black;
+  background-color: rgba(255, 221, 70, 0.904);
+  color: rgb(48, 48, 48);
   font-size: 50px;
+  font-weight: bold;
   font-family: "Times New Roman", Times, serif;
   border: none;
+  border-radius: 10px;
   padding: 1rem;
+  margin-top: 2rem;
 
   position: absolute;
+  left: 20rem;
+  right: 20rem;
   display: flex;
   flex: 1;
   flex-direction: column;
